--- a/FrontEnd/ecommerce/package.json
+++ b/FrontEnd/ecommerce/package.json
@@ -12,6 +12,8 @@
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
+    "react-image-zoom": "^1.3.1",
+    "react-img-zoom": "^0.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
