--- a/BackEnd/ecommerce/src/main/resources/application.properties
+++ b/BackEnd/ecommerce/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=thanhtai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql: true
 spring.security.user.name=thanhtai
 spring.security.user.password=thanhtai
