--- a/FrontEnd/ecommerce/package.json
+++ b/FrontEnd/ecommerce/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
@@ -22,9 +23,11 @@
     "react-image-zoom": "^1.3.1",
     "react-img-zoom": "^0.1.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
