--- a/FrontEnd/ecommerce/package.json
+++ b/FrontEnd/ecommerce/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
